add make targets: up/down run/demo

--- a/arp/Makefile
+++ b/arp/Makefile
@@ -1,9 +1,21 @@
-setup:
+build: 
+	docker compose build
+
+build-if-missing:
+	@docker image inspect cyd-kali &>/dev/null || docker compose build
+
+up: build-if-missing
 	docker compose up -d
 
-run: setup
-	docker compose restart tmux -t 0
-	docker exec -e SLEEP=0.07 -it arp-tmux-1 ./demo.sh
+run: up
+	docker exec -it arp-tmux-1 ./demo-setup.sh
+
+demo: up
+	docker exec -e SLEEP=0.05 -it arp-tmux-1 ./demo.sh
 
 record:
 	asciinema rec -t "ARP poisioning" arp.cast
+
+down:
+	docker compose down -t 0
+	
